--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             const params = getQueryParams();
             if (params.param) {
                 document.getElementById("output").textContent = `Parâmetro recebido: ${params.param}`;
+                
             }
         });
     </script>
+    <a href="file:///C:\Users\Waters\Desktop\Sol Sistemas\FormulasGooglePlanilhas\Arquivos Mensais\abrirPasta.bat" download>Executar .bat</a>
 </head>
 <body>
     <h1>Recebendo Parâmetros</h1>
