--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receber Parâmetros</title>
+    <title>Receber Parâmetros 3</title>
     <script>
         // Função para capturar os parâmetros da URL
         function getQueryParams() {
