--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 <body>
-    <h1>Recebendo Parâmetros</h1>
+    <h1>Explorador de arquivos</h1>
     <p id="output">Nenhum parâmetro recebido ainda.</p>
     
     <!-- Link para a pasta de rede com ID dinâmico -->
